# erm_xmpp

./: .gitignore  _oasis  _tags  myocamlbuild.ml  setup.ml
src/: JID.ml  META  UTF8.ml  XEP_disco.ml  XEP_last.ml  XEP_muc.ml  XEP_stats.ml  XEP_time.ml  XEP_vcard.ml  XEP_version.ml  XEP_xdata.ml  XMPP.ml  dune  punycode.ml  roster.ml  sasl.ml  stanzaError.ml  streamError.ml  xcommands.ml  xmlstream.ml
tests/: dune  lwt_test.ml  punycode_test.ml  test.ml  test_ie.ml
